# todolist

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: action.yaml  build_deploy.yaml  test_build_deploy.yaml
deploy/: .env  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf
tests/: conftest.py  tests.py
tests/core/views/: test_login.py  test_profile_view.py  test_signup.py  test_update_password.py
todolist/: filters.py  middleware.py  settings.py  tools.py  urls.py
todolist/core/: admin.py  apps.py  fields.py  serializers.py  tests.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py  0002_alter_user_options.py
todolist/goals/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_alter_goal_due_date.py
todolist/goals/tests/: test_categories.py  test_goals.py
